#110 + Task-044: Update and delete tasks
Finished checking the task. Updates and deletions work for anonymous
users